--- a/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
@@ -33,3 +33,7 @@ health.config.enabled=false
 ida.api.version=v1
 server.port=8093
 server.servlet.context-path=/idauthentication/${ida.api.version}/internal
+
+mosip.kernel.keymanager.certificate-file-path=classpath:cert/mosipio.crt
+mosip.kernel.keymanager.privatekey-file-path=classpath:cert/mosipio.key
+mosip.kernel.keymanager.certificate-type=X509
