* TokenID offline validator added(using kernel core TokenHandlerUtil)

--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -19,10 +19,10 @@ requestdate.received.in.max.time.mins=20
 #Auth token
 auth-token-generator.rest.uri=https://dev.mosip.io/v1/authmanager/authenticate/clientidsecretkey
 auth-token-validator.rest.uri=https://dev.mosip.io/v1/authmanager/authorize/validateToken
-auth-token-generator.rest.clientId=ida_app_user
+auth-token-generator.rest.clientId=ida
 auth-token-generator.rest.secretKey=5debb60adbfcf8feea4a6ed6160092ec
 auth-token-generator.rest.appId=ida
-auth-token-generator.rest.issuerUrl=ida
+auth-token-generator.rest.issuerUrl=https://mosipkeycloak.southindia.cloudapp.azure.com/auth/realms/mosip
 
 # ID-Authentication Mapping json configurations
 ida.mapping.json.filename=ida-mapping.json 
