--- a/authentication/authentication-keys-generator/src/main/resources/application-local.properties
+++ b/authentication/authentication-keys-generator/src/main/resources/application-local.properties
@@ -6,10 +6,10 @@ mosip.kernel.keymanager.softhsm.keystore-pass=1234
 application.id=IDA
 identity-cache.reference.id=IDENTITY_CACHE
 ida.uin.salt.modulo = 1000
-mosip.ida.database.hostname=104.211.208.136
+mosip.ida.database.hostname=localhost
 mosip.ida.database.port=9001
 mosip.ida.database.user=idauser
-mosip.ida.database.password=Mosip@dev123
+mosip.ida.database.password=asdfghjkkjhgthhb
 mosip.ida.database.url = jdbc:postgresql://${mosip.ida.database.hostname}:${mosip.ida.database.port}/mosip_ida
 mosip.ida.database.driverClassName=org.postgresql.Driver
 mosip.ida.database.schema=ida
