Test cases have been added

--- a/authentication/authentication-internal-service/src/test/resources/application.properties
+++ b/authentication/authentication-internal-service/src/test/resources/application.properties
@@ -282,4 +282,7 @@ request.idtypes.allowed=VID,UIN
 
 mosip.kernel.otp.default-length=6
 #Encrypted data and encrypted symmetric key separator
-mosip.kernel.data-key-splitter=#KEY_SPLITTER#
+ida.key.validityInDays=365
+ida.data-key-splitter=#
+ida.sign.refid=ida
+ida.sign.applicationid=ida
