Changed bio type FIR to Finger, IIR to Iris

--- a/authentication/authentication-internal-service/src/main/resources/errormessages.properties
+++ b/authentication/authentication-internal-service/src/main/resources/errormessages.properties
@@ -4,7 +4,7 @@ IDA-BIA-003=Number of FMR should not exceed 2
 IDA-BIA-005=Single FMR record contains more than one finger
 IDA-BIA-006=Missing biometric data in MOSIP database for the given UIN/Virtual ID
 IDA-BIA-007=Duplicate Irises in request
-IDA-BIA-008=Number of IIR should not exceed 2
+IDA-BIA-008=Number of Iris should not exceed 2
 IDA-BIA-009=Number of FID records should not exceed 1
 IDA-BIA-010=Missing biometric data
 IDA-BIA-012=Missing or empty value for bioType
