--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -258,7 +258,7 @@ id-masterdata-title-service.rest.timeout=100
 static.token.enable=false
 
 # -----------------AuthType Enable----------------------
-auth.types.allowed=pin,demo,otp,bio-FACE,bio-FIR,bio-IIR,bio-FMR
+auth.types.allowed=pin,demo,otp,bio-FACE,bio-Finger,bio-Iris,bio-FMR
 
 mosip.ida.api.ids.auth=mosip.identity.auth
 
