--- a/authentication/authentication-common/src/test/resources/errormessages.properties
+++ b/authentication/authentication-common/src/test/resources/errormessages.properties
@@ -11,7 +11,7 @@ IDA-OTA-101=Key is Null or Invalid
 IDA-OTA-102=Kernel Validate OTP request failed
 IDA-OTA-103=Kernel Generate OTP request failed
 IDA-BIA-002=Duplicate fingers in request
-IDA-BIA-008=Number of IIR should not exceed 2
+IDA-BIA-008=Number of Iris should not exceed 2
 IDA-MLC-001=Request to be received at MOSIP within {0} hrs/min
 IDA-MLC-002=Invalid UIN
 IDA-MLC-003=UIN has been deactivated
