--- a/authentication/authentication-internal-service/src/test/resources/application.properties
+++ b/authentication/authentication-internal-service/src/test/resources/application.properties
@@ -194,7 +194,7 @@ mosip.kernel.phone.max-length=15
 mosip.kernel.phone.min-length=9
 mosip.kernel.phone.special-char=+ -
 #********* Internal Auth Type *********
-internal.auth.types.allowed=demo,otp,bio-FACE,bio-FIR,bio-IIR,bio-FMR
+internal.auth.types.allowed=demo,otp,bio-FACE,bio-Finger,bio-Iris,bio-FMR
 
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA
 mosip.kernel.crypto.symmetric-algorithm-name=AES
@@ -237,7 +237,7 @@ id-masterdata-title-service.rest.timeout=100
 static.token.enable=false
 
 # -----------------AuthType Enable----------------------
-auth.types.allowed=pin,demo,otp,bio-FID,bio-FIR,bio-IIR,bio-FMR
+auth.types.allowed=pin,demo,otp,bio-FID,bio-Finger,bio-Iris,bio-FMR
 
 mosip.ida.api.ids.auth=mosip.identity.auth
 
