--- a/authentication/authentication-otp-service/src/test/resources/application.properties
+++ b/authentication/authentication-otp-service/src/test/resources/application.properties
@@ -191,7 +191,7 @@ mosip.kernel.phone.max-length=15
 mosip.kernel.phone.min-length=9
 mosip.kernel.phone.special-char=+ -
 #********* Internal Auth Type *********
-internal.auth.types.allowed=demo,otp,bio,FID,FIR,IIR,FMR
+internal.auth.types.allowed=demo,otp,bio,bio-Face,bio-Finger,bio-Iris,FMR
 
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA
 mosip.kernel.crypto.symmetric-algorithm-name=AES
@@ -234,7 +234,7 @@ id-masterdata-title-service.rest.timeout=100
 static.token.enable=false
 
 # -----------------AuthType Enable----------------------
-auth.types.allowed=bio,pin,demo,otp,FID,FIR,IIR,FMR
+auth.types.allowed=demo,otp,bio,bio-Face,bio-Finger,bio-Iris,FMR
 
 mosip.ida.api.ids.auth=mosip.identity.auth
 
