--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -240,7 +240,7 @@ id-masterdata-title-service.rest.timeout=100
 static.token.enable=false
 
 # -----------------AuthType Enable----------------------
-auth.types.allowed=bio,pin,demo,otp,FID,FIR,IIR,FMR
+auth.types.allowed=demo,otp,bio,bio-Face,bio-Finger,bio-Iris,FMR
 
 mosip.ida.api.ids.auth=mosip.identity.auth
 
