--- a/authentication/authentication-keys-generator/src/main/resources/application-local.properties
+++ b/authentication/authentication-keys-generator/src/main/resources/application-local.properties
@@ -5,7 +5,7 @@ mosip.kernel.keymanager.softhsm.keystore-type=PKCS11
 mosip.kernel.keymanager.softhsm.keystore-pass=1234
 application.id=IDA
 identity-cache.reference.id=IDENTITY_CACHE
-ida.uin.salt.modulo = 1000
+ida.keygenerator.uin.salt.modulo = 1000
 mosip.ida.database.hostname=localhost
 mosip.ida.database.port=9001
 mosip.ida.database.user=idauser
@@ -15,4 +15,4 @@ mosip.ida.database.driverClassName=org.postgresql.Driver
 mosip.ida.database.schema=ida
 hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
