--- a/authentication/authentication-internal-service/src/test/resources/application.properties
+++ b/authentication/authentication-internal-service/src/test/resources/application.properties
@@ -281,3 +281,6 @@ mosip.id.validation.identity.email=^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\
 request.idtypes.allowed=VID,UIN
 
 mosip.kernel.otp.default-length=6
+
+ida.sign.refid=ida
+ida.sign.applicationid=ida
