--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -100,7 +100,7 @@
 		<maven.javadoc.version>3.0.1</maven.javadoc.version>
 		<maven.swagger.version>2.9.2</maven.swagger.version>
 		<maven.jacoco.version>0.8.2</maven.jacoco.version>
-		<maven.sonar.version>3.2</maven.sonar.version>
+		<maven.sonar.version>3.7.0.1746</maven.sonar.version>
 		<powermock.version>2.0.0</powermock.version>
 
 		<!-- Test & Logging -->
@@ -282,6 +282,14 @@
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>${maven.sonar.version}</version>
+					<executions>
+						<execution>
+							<phase>verify</phase>
+							<goals>
+								<goal>sonar</goal>
+							</goals>
+						</execution>
+					</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
