--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -75,22 +75,23 @@
 
 		<!-- Kernel components -->
 		<kernel.parent.version>1.0.6</kernel.parent.version>
-		<kernel-core.version>1.0.8</kernel-core.version>
+		<kernel-core.version>1.0.9-SNAPSHOT</kernel-core.version>
 		<kernel-idgenerator-tokenid.version>1.0.7-SNAPSHOT</kernel-idgenerator-tokenid.version>
 		<kernel-idvalidator-uin.version>${kernel.parent.version}</kernel-idvalidator-uin.version>
 		<kernel-idvalidator-vid.version>${kernel.parent.version}</kernel-idvalidator-vid.version>
 		<kernel-idobjectvalidator.version>1.0.7</kernel-idobjectvalidator.version>
-		<kernel-dataaccess-hibernate.version>${kernel.parent.version}</kernel-dataaccess-hibernate.version>
 		<kernel-pinvalidator.version>${kernel.parent.version}</kernel-pinvalidator.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
 		<kernel-keygenerator-bouncycastle.version>${kernel.parent.version}</kernel-keygenerator-bouncycastle.version>
 		<kernel-crypto-jce.version>${kernel.parent.version}</kernel-crypto-jce.version>
-		<kernel-bioapi-provider.version>1.0.7-SNAPSHOT</kernel-bioapi-provider.version>
+		<kernel-bioapi-provider.version>1.0.9-SNAPSHOT</kernel-bioapi-provider.version>
 		<kernel-logger-logback.version>${kernel.parent.version}</kernel-logger-logback.version>
 		<kernel-dataaccess-hibernate.version>1.0.7-SNAPSHOT</kernel-dataaccess-hibernate.version>
 		<kernel-cbeffutil-api.version>1.1.0</kernel-cbeffutil-api.version>
 		<kernel-templatemanager-velocity.version>${kernel.parent.version}</kernel-templatemanager-velocity.version>
-		<kernel-auth-adapter.version>1.0.8-SNAPSHOT</kernel-auth-adapter.version>
+		<kernel-auth-adapter.version>1.0.9-SNAPSHOT</kernel-auth-adapter.version>
+		<kernel-biometrics-api.version>0.9-SNAPSHOT</kernel-biometrics-api.version>
+		<kernel-biosdk-provider.version>0.9-SNAPSHOT</kernel-biosdk-provider.version>
 		<id-repository-core.version>1.0.9-SNAPSHOT</id-repository-core.version>
 		<json.utility.version>20180130</json.utility.version>
 				<!-- Maven Plugins -->
