--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -48,6 +48,16 @@
 			<version>${kernel-auth-adapter.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-bioapi-provider</artifactId>
+			<version>${kernel-bioapi-provider.version}</version>
+		</dependency>
+		<dependency>
+			<artifactId>mock-sdk</artifactId>
+			<groupId>io.mosip.mock.sdk</groupId>
+			<version>${mock-sdk-version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${maven.swagger.version}</version>
