--- a/authentication/authentication-service/Dockerfile_DO_NOT_BUILD
+++ b/authentication/authentication-service/Dockerfile_DO_NOT_BUILD
@@ -1,5 +1,5 @@
-ARG docker_registry_url=docker-registry.mosip.io:5000
-FROM ${docker_registry_url}/kernel-keymanager-softhsm:0.1
+#ARG docker_registry_url=docker-registry.mosip.io:5000
+FROM mosipdev/kernel-keymanager-softhsm:0.1
 
 #Uncomment below and Comment above line(i.e. FROM openjdk:8) for OS specific (e.g. Alpine OS ) docker base image
 #FROM openjdk:8-jdk-alpine
@@ -29,7 +29,7 @@ ENV spring_config_label_env=${spring_config_label}
 ENV spring_config_url_env=${spring_config_url}
 
 # environment variable for external jar dependencies
-ENV LD_LIBRARY_PATH=/so-files
+#ENV LD_LIBRARY_PATH=/so-files
 
 # environment variable to pass glowroot, at docker runtime
 ENV is_glowroot_env=${is_glowroot}
