--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -22,7 +22,7 @@ auth-token-validator.rest.uri=https://dev.mosip.io/v1/authmanager/authorize/vali
 auth-token-generator.rest.clientId=ida_app_user
 auth-token-generator.rest.secretKey=5debb60adbfcf8feea4a6ed6160092ec
 auth-token-generator.rest.appId=ida
-auth-token-generator.rest.issuerUrl=ida
+auth-token-generator.rest.issuerUrl=https://mosipkeycloak.southindia.cloudapp.azure.com/auth/realms/mosip
 
 # ID-Authentication Mapping json configurations
 ida.mapping.json.filename=ida-mapping.json 
