--- a/authentication/authentication-service/Dockerfile-authentication-service-softhsm_client_inst-biosdk_inst
+++ b/authentication/authentication-service/Dockerfile-authentication-service-softhsm_client_inst-biosdk_inst
@@ -36,32 +36,19 @@ ENV is_glowroot_env=${is_glowroot}
 # environment variable to pass artifactory url, at docker runtime
 ENV artifactory_url_env=${artifactory_url}
 
+ENV work_dir_env=/
+
 ENV current_module_env=authentication-service
 
 ADD configure_start.sh configure_start.sh
 
 RUN chmod +x configure_start.sh
 
-ADD target/${current_module_env}-*.jar ./opt/Tech5/${current_module_env}.jar
-
-#VOLUME /softhsm
-
-#Downloading external dependencies 
-#ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/identy-BioSDK/ABISTech5FaceSDKAdapter_v2.jar ABISTech5FaceSDKAdapter_v2.jar
-#ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/identy-BioSDK/t5-finger-iris-mosip-auth-v1.2.jar t5-finger-iris-mosip-auth-v1.2.jar 
-#ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/identy-BioSDK/tech5-sdk-v1.5.1.jar tech5-sdk-v1.5.1.jar 
-#ADD http://13.71.87.138:8040/artifactory/libs-release-local/io/mosip/identy-BioSDK/so-files.zip so-files.zip
-
-#RUN apt-get update && apt-get install -y unzip
-#RUN unzip so-files.zip
-#RUN rm -rf so-files.zip
+ADD target/${current_module_env}-*.jar ${current_module_env}.jar
 
 EXPOSE 8090
 
 EXPOSE 9010
-
-#RUN ls -la
-#RUN ls -la so-files/
 
 ENTRYPOINT [ "/configure_start.sh" ]
 
@@ -71,9 +58,7 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     unzip glowroot.zip ; \
     rm -rf glowroot.zip ; \
     sed -i 's/<service_name>/${current_module_env}/g' glowroot/glowroot.properties ; \
-    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar ${current_module_env}.jar ; \
+    java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}" ${current_module_env}.jar ; \
     else \
-    cd /opt/Tech5; java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path=commons-codec-1.9.jar,t5-finger-iris-mosip-auth-v1.2.jar,ABISTech5FaceSDKAdapter_v1.5.jar,tech5-sdk-docker-v1.0.jar /opt/Tech5/${current_module_env}.jar ; \
+    java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}" ${current_module_env}.jar ; \
     fi
-#CMD ["java", "-Dloader.path=/tech5-sdk-v1.5.1.jar,/ABISTech5FaceSDKAdapter_v2.jar,/t5-finger-iris-mosip-auth-v1.2.jar", "-jar","-Dspring.cloud.config.label=${spring_config_label_env}","-Dspring.profiles.active=${active_profile_env}","-Dspring.cloud.config.uri=${spring_config_url_env}", "-Dloader.path=${loader_path_env}", "/opt/Tech5/${current_module_env}.jar"]
-
